feat: add route to list rentals by user!
