# src/shared/infra/http/routes/rental.routes.ts
@@ -1,11 +1,13 @@
 import { CreateRentalController } from '@modules/rentals/useCases/createRental/CreateRentalController';
 import { DevolutionRentalController } from '@modules/rentals/useCases/devolutionRental/DevolutionRentalController';
+import { ListRentalsByUserController } from '@modules/rentals/useCases/listRentalsByUser/ListRentalsByUserController';
 import { Router } from 'express';
 import { ensureAuthenticated } from '../middlewares/ensureAuthenticated';
 
 const rentalRoutes = Router();
 const createRentalController = new CreateRentalController();
 const devolutionRentalController = new DevolutionRentalController();
+const listRentalsByUserController = new ListRentalsByUserController();
 
 rentalRoutes.post('/', ensureAuthenticated, createRentalController.handle);
 
@@ -13,6 +15,12 @@ rentalRoutes.post(
   '/devolution/:id',
   ensureAuthenticated,
   devolutionRentalController.handle,
+);
+
+rentalRoutes.get(
+  '/user',
+  ensureAuthenticated,
+  listRentalsByUserController.handle,
 );
 
 export { rentalRoutes };
